<resources>
    <string name="app_name">Birva_pr</string>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Alert Dialog</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="birva">BIRVA</string>
    <string name="title_activity_navigationdrawer_activity">navigationdrawer_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="err_msg_name">Enter valid Name</string>
    <string name="err_msg_password">Enter Valid Password</string>
    <string name="err_msg_email">Enter valid Email</string>
    <string name="err_msg_conPwd">confirm password does not match</string>

    <string name="register_here">Click here for Registration</string>
    <string name="resister_Username">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirmPassword">Confirm Password</string>
    <string name="register_gender">Gender</string>
    <string name="register_mobile_no">Mobile Number</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="err_msg_email_exist">Email already exist</string>
    <string name="err_msg_empty_fields">Empty Fields </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
